# cpp-core-testament-framework

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Containerfile  Dockerfile  README.md  build.sh  quickstart.sh
CoreServiceLocator/: CMakeLists.txt
CoreServiceLocator/cmake/: CoreServicesConfig.cmake.in
CoreServiceLocator/include/CoreServices/: ServiceLocator.hpp  ServiceLocator.tpp
CoreServiceLocator/src/: ServiceLocator.cpp
CoreServiceLocator/tests/: ConcurrencyValidation.cpp  LifetimeValidation.cpp  MoveValidation.cpp  main.cpp
CoreServiceLocator/tests/cmake/: InstallConsumerTest.cmake
CoreServiceLocator/tests/consumer/: CMakeLists.txt  main.cpp
CoreTestament/: CMakeLists.txt  build.sh
CoreTestament/cmake/: CoreTestamentConfig.cmake.in
CoreTestament/examples/: CMakeLists.txt  FixtureExample.cpp  NormalTestExample.cpp  ParameterizedTestExample.cpp  main.cpp
CoreTestament/include/Testament/: AssertionFailure.hpp  Asserts.hpp  Definitions.hpp  Execution.hpp  FunctionVariant.hpp  GlobalEnvironment.hpp  LifecycleSuite.hpp  Options.hpp  ParameterizedTest.hpp  Registry.hpp  Reporters.hpp  RunSummary.hpp  Runner.hpp  Skip.hpp  SkipRequest.hpp  Suite.hpp  SuiteOptions.hpp  SuiteRegistration.hpp  Test.hpp  TestCase.hpp  TestEventHandler.hpp  TestOptions.hpp  Testament.hpp  Trace.hpp
CoreTestament/include/Testament/detail/: CaseSet.hpp  Concepts.hpp  LocatedName.hpp  MoveOnlyFunction.hpp  NamedTestCase.hpp  ParameterizedTestDefinition.hpp  ParameterizedTestDefinition.tpp  RuntimeBridge.hpp  TestDefinition.hpp  TestDefinition.tpp  TestHandle.hpp
CoreTestament/src/EventFramework/: BaseEvent.hpp  EventDispatcher.hpp  FilterEventDispatcher.hpp
CoreTestament/src/EventFramework/Events/: LogEvent.hpp  TestFailedEvent.hpp  TestPassedEvent.hpp  TestSkippedEvent.hpp
CoreTestament/src/EventHandlers/: BufferedTestEventHandler.hpp  ConsoleTestEventHandler.hpp  JUnitTestEventHandler.cpp  JUnitTestEventHandler.hpp  LogEventHandler.hpp  Reporters.cpp  TestEventHandler.hpp  TestEventHandlerChain.hpp
CoreTestament/src/EventSystem/: EventManager.hpp  ServiceLocator.hpp
CoreTestament/src/api/: AssertionFailure.cpp  Asserts.cpp  LifecycleSuite.cpp  Runner.cpp  SkipRequest.cpp  SuiteOptions.cpp  SuiteRegistration.cpp  TestHandle.cpp  TestOptions.cpp  Trace.cpp
CoreTestament/src/asserts/: Asserts.hpp  CoreTestament.hpp  TestCase.hpp  TestamentTemplates.hpp
CoreTestament/src/configuration/: CommandLineOptions.cpp  CommandLineOptions.hpp  ConfigurationErrorStore.cpp  ConfigurationErrorStore.hpp  ConfigurationErrors.cpp  ConfigurationErrors.hpp  FilterPattern.hpp  OptionsStorage.hpp
CoreTestament/src/core/: AssertionFailure.cpp  Asserts.cpp  Core.ixx  DefaultRun.cpp  ExecutionTimer.cxx  ExecutionTimer.impl.cxx  ExecutionTimer.ixx  ExecutionTimer:Impl.cxx  LifecycleSuite.cpp  LifecyleSuite.cpp  Options.cpp  Registry.cpp  Runner.cpp  SkipRequest.cpp  Suite.cpp  SuiteImpl.hpp  SuiteOptions.cpp  SuiteRegistration.cpp  Test.cpp  TestHandle.cpp  TestImpl.hpp  TestOptions.cpp  TestRegistry2.hpp  TestStatistics.cxx  TestStatistics.ixx  Trace.cpp
CoreTestament/src/core/Internal/: AssertionCollection.hpp  CommandLineOptions.hpp  ConfigurationDiagnostics.cpp  ConfigurationDiagnostics.hpp  (+22 more)
CoreTestament/src/events/: BaseEvent.hpp  ConsoleTestEventHandler.hpp  EventDispatcher.hpp  FilterEventDispatcher.hpp  LogEvent.hpp  TestEventHandler.hpp
CoreTestament/src/old/: TestRegistry.hpp  TestRegistry2.cpp  TestRegistry2.hpp
CoreTestament/src/reporting/: CompositeTestEventHandler.hpp  JUnitTestEventHandler.cpp  JUnitTestEventHandler.hpp
CoreTestament/src/runtime/: AssertionCollection.hpp  AssertionContext.hpp  EnvironmentSession.cpp  EnvironmentSession.hpp  HookExecutor.hpp  LifecycleAccess.hpp  LifecycleHookAccess.hpp  Stopwatch.hpp  SuiteCatalog.cpp  SuiteCatalog.hpp  SuiteFactory.cpp  SuiteFactory.hpp  SuiteInstance.cpp  SuiteInstance.hpp  SuiteRegistry.cpp  SuiteRegistry.hpp  SuiteScheduler.cpp  SuiteScheduler.hpp  TestAccess.hpp  TestCatalog.cpp  TestCatalog.hpp  TestCounts.hpp  TestExecutor.cpp  TestExecutor.hpp  TestFunction.hpp  TestHandleAccess.hpp  TestInstance.cpp  TestInstance.hpp  TestResultRecorder.hpp  TestState.hpp  TraceContext.hpp
CoreTestament/src/tests/: TestRegistry.hpp  TestStatistics.hpp  TestStatus.hpp  TestSuite.hpp
CoreTestament/tests/: CMakeLists.txt  TestCheck.hpp  mainTest.cpp
CoreTestament/tests/Tests/: AssertsValidation.cpp  ConcurrentRunnerValidation.cpp  ConfigurationErrorLifetimeValidation.cpp  ConfigurationErrorValidation.cpp  DefinitionLocationValidation.cpp  FixturePerRunValidation.cpp  FixtureTypeValidation.cpp  GlobalEnvironmentValidation.cpp  HandlerArgumentsValidation.cpp  HandlerFailureIsolationValidation.cpp  InternalRegistryFilterValidation.cpp  InternalSuiteFilterValidation.cpp  InternalSuiteRepeatRunValidation.cpp  InternalTestContextValidation.cpp  InternalTestTimerValidation.cpp  JUnitReporterValidation.cpp  LifecycleHookFailureValidation.cpp  LifecycleRetryValidation.cpp  LifecycleSuiteNameValidation.cpp  LifecycleSuiteValidation.cpp  ListTestsValidation.cpp  NonFatalAssertionsValidation.cpp  NonStandardExceptionValidation.cpp  OptionsValidation.cpp  ParallelSuiteValidation.cpp  ParallelTestValidation.cpp  ParameterizedBehaviorValidation.cpp  ParameterizedSuiteValidation.cpp  RepeatShuffleValidation.cpp  RunnerFilterValidation.cpp  RunnerMoveValidation.cpp  RuntimeSkipValidation.cpp  SuiteInstanceFilterValidation.cpp  SuiteInstanceRepeatRunValidation.cpp  SuiteLifetimeValidation.cpp  SuiteRegistryFilterValidation.cpp  SuiteValidation.cpp  TestHandleValidation.cpp  TestInstanceContextValidation.cpp  TestInstanceTimerValidation.cpp  (+2 more)
CoreTestament/tests/cmake/: CompileFailureTest.cmake  DiscardedHandlesTest.cmake  InstallConsumerTest.cmake
CoreTestament/tests/compile-fail/: DiscardedHandles.cpp  InvalidFixture.cpp  InvalidParameters.cpp  MixedCases.cpp
CoreTestament/tests/consumer/: CMakeLists.txt  main.cpp
CoreTestament/tests/multi-tu/: FirstSuite.cpp  SecondSuite.cpp  main.cpp
(+33 files in other folders)
